--- a/DesignerRHN/DesignerRHN-war/web/personaindividual.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/personaindividual.xhtml
@@ -158,7 +158,7 @@
 
                                     <h:outputText  value="#{msg['sexo']}*" style="position: absolute; top: 145px; left: 15px;font-weight: bold"/>
                                     <p:selectOneMenu value="#{controlPersonaIndividual.nuevaPersona.sexo}" id="sexoModPersonal" style="position: absolute; top: 140px; left: 140px; font-weight: bold;width: 130px;" >  
-                                        <f:selectItem itemLabel="" itemValue="null" />  
+                                        <f:selectItem itemLabel="" itemValue=" " />  
                                         <f:selectItem itemLabel="#{msg['masculino']}" itemValue="M"/>  
                                         <f:selectItem itemLabel="#{msg['femenino']}" itemValue="F"/>
                                         <p:ajax event="change" update="@this"/>
@@ -269,14 +269,14 @@
                                     <h:outputText  value="#{msg['papelDesempeñado']}" style="position: absolute; top: 115px; left: 65px;font-weight: bold"/>
                                     <p:inputText id="papelModCargoDesempeñado" onclick="select();" value="#{controlPersonaIndividual.nuevaVigenciaCargo.papel.descripcion}" style="position: absolute; top: 110px; left: 230px;width: 150px;text-transform: uppercase">
                                         <p:ajax event="focus" listener="#{controlPersonaIndividual.cambiarItemCargoDesempeñado(3)}" process="@this"/>
-                                        <!--<p:ajax event="change" listener="#/{controlPersonaIndividual.modificarCargoDesempeñado(3,'PAPEL', controlPersonaIndividual.nuevaVigenciaCargo.papel.descripcion)}" process="@this" update="papelModCargoDesempeñado"/>-->
+                                        <p:ajax event="change" listener="#{controlPersonaIndividual.modificarCargoDesempeñado(3,'PAPEL', controlPersonaIndividual.nuevaVigenciaCargo.papel.descripcion)}" process="@this" update="papelModCargoDesempeñado"/>
                                         <p:ajax event="dblclick" listener="#{controlPersonaIndividual.listaValoresCargoDesempenado()}" process="@this"/>
                                     </p:inputText>
 
                                     <h:outputText  value="#{msg['empleadoJefe']}" style="position: absolute; top: 145px; left: 65px;font-weight: bold"/>
                                     <p:inputText id="empleadoJefeModCargoDesempeñado" onclick="select();" value="#{controlPersonaIndividual.nuevaVigenciaCargo.empleadojefe.persona.nombreCompleto}" style="position: absolute; top: 140px; left: 230px;width: 150px;text-transform: uppercase">
                                         <p:ajax event="focus" listener="#{controlPersonaIndividual.cambiarItemCargoDesempeñado(4)}" process="@this"/>
-                                        <!--<p:ajax event="change" listener="#/{controlPersonaIndividual.modificarCargoDesempeñado(4,'JEFE', controlPersonaIndividual.nuevaVigenciaCargo.empleadojefe.persona.nombreCompleto)}" process="@this" update="empleadoJefeModCargoDesempeñado"/>-->
+                                        <p:ajax event="change" listener="#{controlPersonaIndividual.modificarCargoDesempeñado(4,'JEFE', controlPersonaIndividual.nuevaVigenciaCargo.empleadojefe.persona.nombreCompleto)}" process="@this" update="empleadoJefeModCargoDesempeñado"/>
                                         <p:ajax event="dblclick" listener="#{controlPersonaIndividual.listaValoresCargoDesempenado()}" process="@this"/>
                                     </p:inputText>
 
@@ -294,7 +294,7 @@
                                         <p:ajax event="dblclick" listener="#{controlPersonaIndividual.listaValoresCentroCosto()}" process="@this"/>
                                     </p:inputText>
 
-                                    <h:outputText id="infoEstructuraCentroCosto"  value="#{msg['descripcionEstructura']}*" style="position: absolute; top: 55px; left: 65px;font-weight: bold"/>
+                                    <h:outputText id="infoEstructuraCentroCosto" value="#{msg['descripcionEstructura']}*" style="position: absolute; top: 55px; left: 65px;font-weight: bold"/>
                                     <p:inputText id="estructuraModCentroCosto" disabled="#{controlPersonaIndividual.disableDescripcionEstructura}" onclick="select();" value="#{controlPersonaIndividual.nuevaVigenciaLocalizacion.localizacion.nombre}"  style="position: absolute; top: 50px; left: 245px;width: 155px;text-transform: uppercase">
                                         <p:ajax event="focus" listener="#{controlPersonaIndividual.cambiarItemCentroCosto(1)}" process="@this"/>
                                         <p:ajax event="change" listener="#{controlPersonaIndividual.modificarCentroCosto(1,'ESTRUCTURA', controlPersonaIndividual.nuevaVigenciaLocalizacion.localizacion.centrocosto.nombre)}" process="@this" update="estructuraModCentroCosto"/>
@@ -310,9 +310,11 @@
                                     <h:outputText value="" style="position: absolute; background-image: url(Imagenes/Iconos/tipoTrabajador.png); width: 50px; height: 50px; top: 15px; left: 5px; background-repeat: no-repeat; border: none; background-size: 100% 100%; border: outset; border-width: 2px; border-width: 2px;" />
 
                                     <h:outputText  value="#{msg['tipoTrabajador']}*" style="position: absolute; top: 35px; left: 65px;font-weight: bold"/>
-                                    <p:inputText id="tipoTrabajadorModTipoTrabajador" onclick="select();" value="#{controlPersonaIndividual.nuevaVigenciaTipoTrabajador.tipotrabajador.nombre}" style="position: absolute; top: 30px; left: 230px;width: 150px;text-transform: uppercase">
+                                    <p:inputText id="tipoTrabajadorModTipoTrabajador" onclick="select();" value="#{controlPersonaIndividual.nuevaVigenciaTipoTrabajador.tipotrabajador.nombre}" 
+                                                 style="position: absolute; top: 30px; left: 230px;width: 150px;text-transform: uppercase">
                                         <p:ajax event="focus" listener="#{controlPersonaIndividual.cambiarItemTipoTrabajador(0)}" process="@this"/>
-                                        <p:ajax event="change" listener="#{controlPersonaIndividual.modificarTipoTrabajador(0,'TIPOTRABAJADOR', controlPersonaIndividual.nuevaVigenciaTipoTrabajador.tipotrabajador.nombre)}" process="@this" update="tipoTrabajadorModTipoTrabajador"/>
+                                        <p:ajax event="change" listener="#{controlPersonaIndividual.modificarTipoTrabajador(0,'TIPOTRABAJADOR', controlPersonaIndividual.nuevaVigenciaTipoTrabajador.tipotrabajador.nombre)}" 
+                                                process="@this" update="tipoTrabajadorModTipoTrabajador"/>
                                         <p:ajax event="dblclick" listener="#{controlPersonaIndividual.listaValoresTipoTrabajador()}" process="@this"/>
                                     </p:inputText>
                                 </fieldset>
@@ -477,7 +479,7 @@
 
                                     <h:outputText  value="#{msg['tipoCuenta']}" style="position: absolute; top: 85px; left: 65px;font-weight: bold"/>
                                     <p:selectOneMenu id="tipoCuentaModFormaPago" value="#{controlPersonaIndividual.nuevaVigenciaFormaPago.tipocuenta}" style="position: absolute; top: 80px; left: 230px; font-weight: bold;width: 100px;" >  
-                                        <f:selectItem itemLabel="" itemValue="null" />  
+                                        <f:selectItem itemLabel="" itemValue=" " />  
                                         <f:selectItem itemLabel="#{msg['ahorros']}" itemValue="A" />  
                                         <f:selectItem itemLabel="#{msg['corriente']}" itemValue="C" />
                                         <p:ajax event="change" update="@this" />
@@ -1735,9 +1737,15 @@
                 <h:form id="formDialogos">
 
                     <p:dialog id="advertenciaFechaIngreso" header="#{msg['atencion']}" widgetVar="advertenciaFechaIngreso"  resizable="false" draggable="false" modal="true" height="98" width="433px" style="font-size: 12px" closable="true">  
-                        <h:graphicImage value="Imagenes/Iconos/alerta.png" width="70" height="50" style="position: absolute; left: 5px; top: 10px;"  />
-                        <h:outputText value="#{msg['advertenciaFechaIngreso']}" style="position: absolute; left: 80px; top: 10px; width: 285px; font-weight:bold;" />
-                        <p:commandButton icon="ui-icon-check" value="#{msg['aceptar']}" onclick="advertenciaFechaIngreso.hide();" style="position: absolute; top: 65px; left: 325px" process="@this" />
+                        <h:graphicImage value="Imagenes/Iconos/alerta.png" width="70" height="50" style="position: absolute; left: 5px; top: 10px;"/>
+                        <h:outputText value="#{msg['advertenciaFechaIngreso']}" style="position: absolute; left: 80px; top: 10px; width: 285px; font-weight:bold;"/>
+                        <p:commandButton icon="ui-icon-check" value="#{msg['aceptar']}" onclick="advertenciaFechaIngreso.hide();" style="position: absolute; top: 65px; left: 325px" process="@this"/>
+                    </p:dialog>
+
+                    <p:dialog id="advertenciaSeleccionTipoT" header="#{msg['atencion']}" widgetVar="advertenciaSeleccionTipoT"  resizable="false" draggable="false" modal="true" height="98" width="433px" style="font-size: 12px" closable="true">  
+                        <h:graphicImage value="Imagenes/Iconos/alerta.png" width="70" height="50" style="position: absolute; left: 5px; top: 10px;"/>
+                        <h:outputText value="#{msg['advertenciaSeleccionTipoT']}" style="position: absolute; left: 80px; top: 10px; width: 285px; font-weight:bold;"/>
+                        <p:commandButton icon="ui-icon-check" value="#{msg['aceptar']}" onclick="advertenciaSeleccionTipoT.hide();" style="position: absolute; top: 65px; left: 325px" process="@this"/>
                     </p:dialog>
 
                     <p:dialog id="errorEmailPersona" header="#{msg['error']}" widgetVar="errorEmailPersona"  resizable="false" draggable="false" modal="true" height="60" width="308px" style="font-size: 12px" closable="true">  
@@ -1830,38 +1838,38 @@
                         <p:commandButton icon="ui-icon-check" value="#{msg['aceptar']}" onclick="errorEmpleadoDuplicado.hide();" style="position: absolute; top: 67px; left: 320px" process="@this" />
                     </p:dialog>                    
 
-                    <p:dialog id="aletarTiposTrabajadoresRL" header="#{msg['atencion']}" widgetVar="aletarTiposTrabajadoresRL"  resizable="false" draggable="false" modal="true" height="98" width="433px" style="font-size: 12px" closable="true">  
-                        <h:graphicImage value="Imagenes/Iconos/alerta.png" width="70" height="50" style="position: absolute; left: 5px; top: 10px;"  />
+                    <p:dialog id="aletarTiposTrabajadoresRL" header="#{msg['error']}" widgetVar="aletarTiposTrabajadoresRL"  resizable="false" draggable="false" modal="true" height="98" width="433px" style="font-size: 12px" closable="true">  
+                        <h:graphicImage value="Imagenes/Iconos/error.png" width="50" height="50" style="position: absolute; left: 5px; top: 10px;"  />
                         <h:outputText value="#{msg['aletarTiposTrabajadoresRL']}" style="position: absolute; left: 80px; top: 10px; width: 285px; font-weight:bold;" />
                         <p:commandButton icon="ui-icon-check" value="#{msg['aceptar']}" onclick="aletarTiposTrabajadoresRL.hide();" style="position: absolute; top: 67px; left: 320px" process="@this" />
                     </p:dialog>   
 
-                    <p:dialog id="aletarTiposTrabajadoresTS" header="#{msg['atencion']}" widgetVar="aletarTiposTrabajadoresTS"  resizable="false" draggable="false" modal="true" height="98" width="433px" style="font-size: 12px" closable="true">  
-                        <h:graphicImage value="Imagenes/Iconos/alerta.png" width="60" height="50" style="position: absolute; left: 10px; top: 10px;"  />
+                    <p:dialog id="aletarTiposTrabajadoresTS" header="#{msg['error']}" widgetVar="aletarTiposTrabajadoresTS"  resizable="false" draggable="false" modal="true" height="98" width="433px" style="font-size: 12px" closable="true">  
+                        <h:graphicImage value="Imagenes/Iconos/error.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"  />
                         <h:outputText value="#{msg['aletarTiposTrabajadoresTS']}" style="position: absolute; left: 80px; top: 10px; width: 285px; font-weight:bold;" />
                         <p:commandButton icon="ui-icon-check" value="#{msg['aceptar']}" onclick="aletarTiposTrabajadoresTS.hide();" style="position: absolute; top: 67px; left: 320px" process="@this" />
                     </p:dialog>  
 
-                    <p:dialog id="aletarTiposTrabajadoresTC" header="#{msg['atencion']}" widgetVar="aletarTiposTrabajadoresTC"  resizable="false" draggable="false" modal="true" height="98" width="433px" style="font-size: 12px" closable="true">  
-                        <h:graphicImage value="Imagenes/Iconos/alerta.png" width="70" height="50" style="position: absolute; left: 5px; top: 10px;"  />
+                    <p:dialog id="aletarTiposTrabajadoresTC" header="#{msg['error']}" widgetVar="aletarTiposTrabajadoresTC"  resizable="false" draggable="false" modal="true" height="98" width="433px" style="font-size: 12px" closable="true">  
+                        <h:graphicImage value="Imagenes/Iconos/error.png" width="50" height="50" style="position: absolute; left: 5px; top: 10px;"  />
                         <h:outputText value="#{msg['aletarTiposTrabajadoresTC']}" style="position: absolute; left: 80px; top: 10px; width: 285px; font-weight:bold;" />
                         <p:commandButton icon="ui-icon-check" value="#{msg['aceptar']}" onclick="aletarTiposTrabajadoresTC.hide();" style="position: absolute; top: 67px; left: 320px" process="@this" />
                     </p:dialog>  
 
-                    <p:dialog id="aletarTiposTrabajadoresNL" header="#{msg['atencion']}" widgetVar="aletarTiposTrabajadoresNL"  resizable="false" draggable="false" modal="true" height="98" width="433px" style="font-size: 12px" closable="true">  
-                        <h:graphicImage value="Imagenes/Iconos/alerta.png" width="70" height="50" style="position: absolute; left: 5px; top: 10px;"  />
+                    <p:dialog id="aletarTiposTrabajadoresNL" header="#{msg['error']}" widgetVar="aletarTiposTrabajadoresNL"  resizable="false" draggable="false" modal="true" height="98" width="433px" style="font-size: 12px" closable="true">  
+                        <h:graphicImage value="Imagenes/Iconos/error.png" width="50" height="50" style="position: absolute; left: 5px; top: 10px;"  />
                         <h:outputText value="#{msg['aletarTiposTrabajadoresNL']}" style="position: absolute; left: 80px; top: 10px; width: 285px; font-weight:bold;" />
                         <p:commandButton icon="ui-icon-check" value="#{msg['aceptar']}" onclick="aletarTiposTrabajadoresNL.hide();" style="position: absolute; top: 67px; left: 320px" process="@this" />
                     </p:dialog>  
 
-                    <p:dialog id="aletarTiposTrabajadoresC" header="#{msg['atencion']}" widgetVar="aletarTiposTrabajadoresC"  resizable="false" draggable="false" modal="true" height="98" width="433px" style="font-size: 12px" closable="true">  
-                        <h:graphicImage value="Imagenes/Iconos/alerta.png" width="70" height="50" style="position: absolute; left: 5px; top: 10px;"  />
+                    <p:dialog id="aletarTiposTrabajadoresC" header="#{msg['error']}" widgetVar="aletarTiposTrabajadoresC"  resizable="false" draggable="false" modal="true" height="98" width="433px" style="font-size: 12px" closable="true">  
+                        <h:graphicImage value="Imagenes/Iconos/error.png" width="50" height="50" style="position: absolute; left: 5px; top: 10px;"  />
                         <h:outputText value="#{msg['aletarTiposTrabajadoresC']}" style="position: absolute; left: 80px; top: 10px; width: 285px; font-weight:bold;" />
                         <p:commandButton icon="ui-icon-check" value="#{msg['aceptar']}" onclick="aletarTiposTrabajadoresC.hide();" style="position: absolute; top: 67px; left: 320px" process="@this" />
                     </p:dialog>  
 
-                    <p:dialog id="errorCamposObligatorios" header="#{msg['atencion']}" widgetVar="errorCamposObligatorios"  resizable="false" draggable="false" modal="true" height="88" width="388px" style="font-size: 12px" closable="true">  
-                        <h:graphicImage value="Imagenes/Iconos/alerta.png" width="70" height="50" style="position: absolute; left: 5px; top: 10px;"  />
+                    <p:dialog id="errorCamposObligatorios" header="#{msg['error']}" widgetVar="errorCamposObligatorios"  resizable="false" draggable="false" modal="true" height="88" width="388px" style="font-size: 12px" closable="true">  
+                        <h:graphicImage value="Imagenes/Iconos/error.png" width="50" height="50" style="position: absolute; left: 5px; top: 10px;"  />
                         <h:outputText value="#{msg['errorCamposObligatorios']}" style="position: absolute; left: 80px; top: 10px; width: 235px; font-weight:bold;" />
                         <p:commandButton icon="ui-icon-check" value="#{msg['aceptar']}" onclick="errorCamposObligatorios.hide();" style="position: absolute; top: 60px; left: 280px" process="@this" />
                     </p:dialog>
