--- a/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
@@ -23,8 +23,8 @@
                                         </div>
                                     </div>
                                     <div style="height: 50px;">
-                                        <p:commandButton style="width: 40px; height: 40px; background-image: url(Imagenes/Iconos/novedad02.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; vertical-align: top;" value="" action="novedadconcepto" />
-                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Por Concepto..." action="novedadconcepto"/>
+                                        <p:commandButton style="width: 40px; height: 40px; background-image: url(Imagenes/Iconos/novedad02.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; vertical-align: top;" value="" actionListener="#{controlNovedadesConceptos.recibirPagina('novedad')}" action="novedadconcepto" />
+                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Por Concepto..." onclick="#{controlNovedadesConceptos.recibirPagina('novedad')}" action="novedadconcepto"/>
                                         <div style="position: relative; left: 46px; top: -26px; width: 177px; height: 34px;">
                                             <h:outputText style="color: #000;" value="Novedades manuales y semiautomáticas por concepto"/>
                                         </div>
