--- a/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
@@ -65,8 +65,8 @@
                                         </div>
                                     </div>
                                     <div style="height: 50px;">
-                                        <p:commandButton style="width: 40px; height: 40px; background-image: url(Imagenes/Iconos/novedad08.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; vertical-align: top;" value="" actionListener="#{controlNovedad.recibir('Pago Parcial De Cesantia')}" action="Impresion" ></p:commandButton>
-                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Pago Parcial de Cesantia" action="Impresion"/>
+                                        <p:commandButton style="width: 40px; height: 40px; background-image: url(Imagenes/Iconos/novedad08.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; vertical-align: top;" value="" actionListener="#{controlNovedadPagoParcialCesantias.recibirPag('novedad')}" action="pagoparcial" ></p:commandButton>
+                                        <h:commandLink style="font-weight: bold; color: #14388B;" value="Pago Parcial de Cesantías" action="pagoparcial" actionListener="#{controlNovedadPagoParcialCesantias.recibirPag('novedad')}" />
                                         <div style="position: relative; left: 46px; top: -26px; width: 177px; height: 34px;">
                                             <h:outputText style="color: #000;" value="Registro de cesantías anticipadas por empleado"/>
                                         </div>
