--- a/DesignerRHN/DesignerRHN-war/web/perdireccion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/perdireccion.xhtml
@@ -68,8 +68,8 @@
                                 <p:tooltip  for="refrescar" value="#{msg['refrescar']}"/>
 
                                 <p:separator style="position: relative; top: -9px"/>
-                                <p:commandButton id="salir" value="" style="background-image: url(Imagenes/Iconos/salir.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px "
-                                                 action="#{controlPerDirecciones.salir()}"  process="@this" />  
+                                <p:commandButton id="salir" value=" " style="background-image: url(Imagenes/Iconos/salir.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px "
+                                                 actionListener="#{controlPerDirecciones.salir()}" action="individual"  process="@this" />  
                                 <p:tooltip  for="salir" value="#{msg['salir']}"/>
                                 
                             </p:toolbarGroup>  
