--- a/DesignerRHN/DesignerRHN-war/web/pertelefono.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/pertelefono.xhtml
@@ -63,12 +63,12 @@
 
                                 <p:separator style="position: relative; top: -9px"/>
 
-                                <p:commandButton id="refrescar" value="" style="background-image: url(Imagenes/Iconos//refrescar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px "
+                                <p:commandButton id="refrescar" value="" style="background-image: url(Imagenes/Iconos/refrescar.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px "
                                                  oncomplete="window.location.reload()" actionListener="#{controlPerTelefonos.cancelarModificacion()}" process="@this" />  
                                 <p:tooltip  for="refrescar" value="#{msg['refrescar']}"/>
 
                                 <p:separator style="position: relative; top: -9px"/>
-                                <p:commandButton id="salir" value="" style="background-image: url(Imagenes/Iconos//salir.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px "
+                                <p:commandButton id="salir" value="" style="background-image: url(Imagenes/Iconos/salir.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 25px; height: 25px "
                                                  action="vigDepEmplInd" process="@this" />  
                                 <p:tooltip  for="salir" value="Salir"/>
 
