--- a/DesignerRHN/DesignerRHN-war/web/novedadesreemplazos.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedadesreemplazos.xhtml
@@ -83,9 +83,9 @@
                         
                         <fieldset style="position: absolute;top: 80px;left: 10px;height: 130px;width: 580px; border-radius: 10px; text-align: left">
                             <legend style="font-size: 14px; color: #14388B"><strong>#{msg['empleados']}</strong></legend>
-                            <p:commandButton style="background-image: url(Imagenes/Iconos/buscardb.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 90px; height: 30px; position: absolute; left: 630px; top: 30px;  " id="btnBuscarTerceros" actionListener="#{controlNovedadesTerceros.asignarIndex(encargaturas, 4, 0)}" value="" process="@this"/>
-                            <p:commandButton style="background-image: url(Imagenes/Iconos/todosdb.png); background-size: 100% 100%; 
-                                             background-repeat: no-repeat; border: none; width: 90px; height: 30px; position: absolute; left: 630px; top: 70px;  " id="btnMostrarTodos" actionListener="#{controlNovedadesTerceros.mostrarTodos()}" value="" process="@this"/>
+                            <p:commandButton style="background-image: url(Imagenes/Iconos/buscardbL.png); background-size: 100% 100%; background-repeat: no-repeat; border: none; width: 150px; height: 30px; position: absolute; left: 630px; top: 30px;  " id="btnBuscarEmpl" actionListener="#{controlNovedadesReemplazos.asignarIndex(encargaturas, 0, 0)}" value="" process="@this"/>
+                            <p:commandButton style="background-image: url(Imagenes/Iconos/todosdbL.png); background-size: 100% 100%; 
+                                             background-repeat: no-repeat; border: none; width: 150px; height: 30px; position: absolute; left: 630px; top: 70px;  " id="btnMostrarTodos" actionListener="#{controlNovedadesReemplazos.mostrarTodos()}" value="" process="@this"/>
 
 
                             <p:dataTable id="datosEmpleados" var="empleados" value="#{controlNovedadesReemplazos.listaFalsaEmpleados}"
@@ -769,7 +769,7 @@
 
                 <h:form id="formExportar">
                     <p:dataTable id="datosEncargaturasExportar" var="encargaturas" style="visibility: hidden; display: none;"                           
-                                 value="#{controlNovedadesReemplazos.listaEncargaturas}"> 
+                                 value="#{controlNovedadesReemplazos.listaEncargaturas}" rowKey="#{encargaturas.secuencia}"> 
 
                         <!--COLUMNAS TABLA ENCARGATURAS--> 
 
